--- a/index.html
+++ b/index.html
@@ -677,7 +677,22 @@ on small screens) */
    <li>₹ 150 / 1000 Followers</li>
    <li>₹ 300 / 2000 Followers</li>
    <li>₹ 400 / 3000 Followers</li>
-   <li>₹ 550 / 5000 Followers</li>
+   <li>₹ 500 / 50000 Followers</li>
+    <li>₹ 700 / 100000 Followers</li>
+   <li class="grey"><a href="https://wa.me/qr/FLSNF57TOJIEF1" data-action="share/whatsapp/share"  
+        target="_blank"
+   class="button">
+   
+   Message Me</a></li>
+  </ul>
+</div>
+    
+    <div class="columns">
+  <ul class="price">
+   <li class="header">YouTube Service</li>
+   <li class="grey">₹ 10 / 100 Followers</li>
+   <li>₹ 225 / 4000 subscribers</li>
+   <li>₹ 1500 / Monetization Plan</li>
    <li class="grey"><a href="https://wa.me/qr/FLSNF57TOJIEF1" data-action="share/whatsapp/share"  
         target="_blank"
    class="button">
