--- a/index.html
+++ b/index.html
@@ -690,8 +690,8 @@ on small screens) */
     <div class="columns">
   <ul class="price">
    <li class="header">YouTube Service</li>
-   <li class="grey">₹ 10 / 100 Followers</li>
-   <li>₹ 225 / 4000 subscribers</li>
+   <li class="grey">₹ 225 / 4000 Subscribers</li>
+  
    <li>₹ 1500 / Monetization Plan</li>
    <li class="grey"><a href="https://wa.me/qr/FLSNF57TOJIEF1" data-action="share/whatsapp/share"  
         target="_blank"
